--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "ejs": "^2.4.1",
     "express": "^4.13.4",
     "express-session": "^1.13.0",
+    "mongodb": "^2.1.6",
+    "mongoose": "^4.4.2",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0"
   }
