--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mongodb": "^2.1.6",
     "mongoose": "^4.4.1",
     "passport": "^0.3.2",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "validator": "^4.8.0"
   }
 }
